--- a/Siang/package.json
+++ b/Siang/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "crypto-js": "^3.1.9-1",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
